--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face
+{
+  font-family: 'Open Sans-Regular';
+  src: url('OpenSans-Regular.ttf');
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html 
+{
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+body 
+{
+  font-family: 'Open Sans-Regular';
+  margin: 0;
+  padding: 0;
+  color:white;
+  /*background-color: #222f61;*/
+}
+
+.Background
+{
+  position: absolute;
+  top:0;
+  height: 100%;
+  width: 4175px;
+  z-index: -1;
+  background-image: url("Toronto_Night.jpg");
+  background-attachment: fixed;
+  background-size: auto 100%;
+  animation-fill-mode: both;
+  animation-name: body-background-animation;
+  animation-timing-function:linear;
+  animation-direction:alternate;
+  animation-iteration-count: infinite;
+  animation-duration: 90s;
+}
+
+@keyframes body-background-animation
+{
+  0% {background-position: 40%;}
+  25% {background-position: 50%}
+  50% {background-position: 30%}
+  75% {background-position: 60%}
+  100% {background-position: 40%}
 }
